updates from presentation day

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required (VERSION 3.25)
 
 set (CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS "-Wall -Wextra -std=c++17 -g -m64 -O3 -fsanitize=address")
+set(CMAKE_CXX_FLAGS "-std=c++17 -m64 -O3")
 set(CXX_STANDARD_REQUIRED ON)
 
 set (glm_DIR Z:/GLM/lib/cmake/glm)
